--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "homework-news-app",
+  "homepage": "https://al-mart.github.io/news-app/",
+  "name": "news-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -66,6 +67,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "deploy": "gh-pages -d build",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -138,5 +140,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
