docs folder config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "news-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
@@ -67,8 +67,8 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "predeploy": "npm run build --profile",
-    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build  && rm -rf docs && mv build docs",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
