--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build  && rm -rf docs && mv build docs",
-    "build": "node scripts/build.js",
+    "deploy": "gh-pages -d build",
+    "build": "node scripts/build.js && rimraf docs && move build docs",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -143,6 +143,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "rimraf": "^3.0.2"
   }
 }
